# Spinning-triangle

./: Makefile.am  README.txt  autogen.sh  configure.ac
src/: triangle.c
